fix: tickets form flex-wrap

--- a/museum/src/scss/blocks/tickets.scss
+++ b/museum/src/scss/blocks/tickets.scss
@@ -1,5 +1,6 @@
 .tickets {
   display: flex;
+  flex-wrap: wrap;
 
   @media (max-width: 1024px) {
     flex-wrap: wrap;
